@@ -1,3 +1,6 @@
+  [Graeme Wheaterill]
+  * Fixes to bchydro_2016_epistemic, eshm20_craton and lanzano_2019
+
   [Marco Pagani]
   * Fixed bug in get_profiles_from_simple_fault_data affecting KiteSurfaces
 
